--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>yo</h1>
-    <h2><a href="/Front-end-Project2/contact.html">test2</a></h2>
+    <h2>test2</h2>
+    <a href="/Front-end-Project2/contact.html">test2</a>
 </body>
 </html>
