--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul><a href="/Front-end-Project2/Unit1.html">test2</a></ul>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <form>
+            
+        </form>
+    </footer>
     <h1>yo</h1>
-    <h2>test2</h2>
-    <a href="/Front-end-Project2/contact.html">test2</a>
 </body>
 </html>
