--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Primitive Types</p>
                 <ul class="unitDropdown" id="unit1Lessons">
-                    <li><a href="/Front-end-Project2/unit1.html">1.1 - Primitive Types</a></li>
-                    <li><a href="/Front-end-Project2/unit1.html">1.2 - Variables and Primitive Data Types</a></li>
-                    <li><a href="/Front-end-Project2/unit1.html">1.3 - Expressions and Assignment Statements</a></li>
-                    <li><a href="/Front-end-Project2/unit1.html">1.4 - Compound Assignment Operators</a></li>
-                    <li><a href="/Front-end-Project2/unit1.html">1.5 - Casting and Ranges of Variables</a></li>
+                    <li><a href="unit1.html">1.1 - Primitive Types</a></li>
+                    <li><a href="unit1.html">1.2 - Variables and Primitive Data Types</a></li>
+                    <li><a href="unit1.html">1.3 - Expressions and Assignment Statements</a></li>
+                    <li><a href="unit1.html">1.4 - Compound Assignment Operators</a></li>
+                    <li><a href="unit1.html">1.5 - Casting and Ranges of Variables</a></li>
                     <li><hr></li>
                 </ul>
 
