--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <title>Homepage</title>
     
 </head>
@@ -41,11 +41,11 @@
             
 
             <div id="sideNavSlider">
-                <a href="/Front-end-Project2/index.html">Home</a>
+                <a href="index.html">Home</a>
 
-                <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Primitive Types</p>
+                <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Getting Started and Primitive Types</p>
                 <ul class="unitDropdown" id="unit1Lessons">
-                    <li><a href="unit1.html">1.1 - Primitive Types</a></li>
+                    <li><a href="unit1.html">1.1 - Why Programming? Why Java?</a></li>
                     <li><a href="unit1.html">1.2 - Variables and Primitive Data Types</a></li>
                     <li><a href="unit1.html">1.3 - Expressions and Assignment Statements</a></li>
                     <li><a href="unit1.html">1.4 - Compound Assignment Operators</a></li>
@@ -55,37 +55,37 @@
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit2Lessons');">Unit 2 - Using Objects</p>
                 <ul class="unitDropdown" id="unit2Lessons">
-                    <li><a href="/Front-end-Project2/unit2.html">2.1 - Instances of Classes</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.2 - Creating and Storing Objects</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.3 - Calling a Void Method</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.4 - Calling a Void Method With Parameters</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.5 - Calling a Non-Void Method</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.7 - String Methods</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.8 - Wrapper Classes</a></li>
-                    <li><a href="/Front-end-Project2/unit2.html">2.9 - Using the Math Class</a></li>
+                    <li><a href="unit2.html">2.1 - Instances of Classes</a></li>
+                    <li><a href="unit2.html">2.2 - Creating and Storing Objects</a></li>
+                    <li><a href="unit2.html">2.3 - Calling a Void Method</a></li>
+                    <li><a href="unit2.html">2.4 - Calling a Void Method With Parameters</a></li>
+                    <li><a href="unit2.html">2.5 - Calling a Non-Void Method</a></li>
+                    <li><a href="unit2.html">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
+                    <li><a href="unit2.html">2.7 - String Methods</a></li>
+                    <li><a href="unit2.html">2.8 - Wrapper Classes</a></li>
+                    <li><a href="unit2.html">2.9 - Using the Math Class</a></li>
                     <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit3Lessons');">Unit 3 - Boolean Expressions and If Statements</p>
                 <ul class="unitDropdown" id="unit3Lessons">
-                    <li><a href="/Front-end-Project2/unit3.html">3.1 - Overview and Boolean Expressions</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.2 - If Statements and Control Flow</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.3 - If-Else Statements</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.4 - Else If Statements</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.5 - Compound Boolean Expressions</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.6 - Equivalent Boolean Expressions</a></li>
-                    <li><a href="/Front-end-Project2/unit3.html">3.7 - Comparing Objects</a></li>
+                    <li><a href="unit3.html">3.1 - Overview and Boolean Expressions</a></li>
+                    <li><a href="unit3.html">3.2 - If Statements and Control Flow</a></li>
+                    <li><a href="unit3.html">3.3 - If-Else Statements</a></li>
+                    <li><a href="unit3.html">3.4 - Else If Statements</a></li>
+                    <li><a href="unit3.html">3.5 - Compound Boolean Expressions</a></li>
+                    <li><a href="unit3.html">3.6 - Equivalent Boolean Expressions</a></li>
+                    <li><a href="unit3.html">3.7 - Comparing Objects</a></li>
                     <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit4Lessons');">Unit 4 - Iteration</p>
                 <ul class="unitDropdown" id="unit4Lessons">
-                    <li><a href="/Front-end-Project2/unit4.html">4.1 - While Loops</a></li>
-                    <li><a href="/Front-end-Project2/unit4.html">4.2 - For Loops</a></li>
-                    <li><a href="/Front-end-Project2/unit4.html">4.3 - Loops and Strings</a></li>
-                    <li><a href="/Front-end-Project2/unit4.html">4.4 - Nested For Loops</a></li>
-                    <li><a href="/Front-end-Project2/unit4.html">4.5 - Loop Analysis</a></li>
+                    <li><a href="unit4.html">4.1 - While Loops</a></li>
+                    <li><a href="unit4.html">4.2 - For Loops</a></li>
+                    <li><a href="unit4.html">4.3 - Loops and Strings</a></li>
+                    <li><a href="unit4.html">4.4 - Nested For Loops</a></li>
+                    <li><a href="unit4.html">4.5 - Loop Analysis</a></li>
                     <li><hr></li>
                 </ul>
 
