--- a/unit1.html
+++ b/unit1.html
@@ -117,12 +117,19 @@
                 order to operate at its fullest potential. If that doesn't really make sense, don't worry, that is what this 
                 course is for.
             </p>
+            <a href="https://statisticsanddata.org/data/the-most-popular-programming-languages-1965-2022-new-update/">
+                <img src="Images/popularLanguages.png" alt="Chart of most popular programming languages">
+            </a>
         </div>
         <hr class="unitSeparate">
 
         <h2>1.2 - Variables and Primitive Data Types</h2>
         <div class="unitContent">
-
+            <p>
+                Primitive data types are known as the different kinds of information that a programming language takes in to operate. 
+                These kinds of information are categorized under different terms. The three basic primitive data types used throughout
+                the entirety of this course are known as Int, Double, and Boolean.
+            </p>
         </div>
         <hr class="unitSeparate">
 
