--- a/unit1.html
+++ b/unit1.html
@@ -117,7 +117,7 @@
                 order to operate at its fullest potential. If that doesn't really make sense, don't worry, that is what this 
                 course is for.
             </p>
-            <a href="https://statisticsanddata.org/data/the-most-popular-programming-languages-1965-2022-new-update/">
+            <a href="https://statisticsanddata.org/data/the-most-popular-programming-languages-1965-2022-new-update/" target="_blank">
                 <img src="Images/popularLanguages.png" alt="Chart of most popular programming languages">
             </a>
 
@@ -249,7 +249,7 @@
                     &nbsp &nbsp System.out.print("String that was entered was"); <br>
                     &nbsp &nbsp System.out.println(inputString); <br>
                     &nbsp } <br>
-                    } <br>
+                    }
                 </p>
             </div>
             <p>
