--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
           <p class="lead">
             <a href="#" class="btn btn-lg btn-secondary" onclick="activeSideNav();openCloseNav();">Learn more</a>
           </p>
-            
+          <a href="https://github.com/rickyl3" target="_blank">
+            <img src="Images/GitHub-Mark-64px.png" id="github" alt="Github Link">
+          </a>
         </main>
     </div>
 
