--- a/unit2.html
+++ b/unit2.html
@@ -461,7 +461,7 @@
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
             <section class="">
-              <form action="">
+              <form action="https://formspree.io/f/mgeqdlqd" method="POST">
                 <div class="row d-flex justify-content-center">
                   <div class="col-auto">
                     <p class="pt-2">
@@ -471,7 +471,7 @@
         
                   <div class="col-md-5 col-12">
                     <div class="form-outline form-white mb-4">
-                      <textarea id="adviceTextarea" class="form-control"></textarea>
+                      <textarea id="adviceTextarea" class="form-control" name="feedback" required></textarea>
                     </div>
                   </div>
         
