--- a/unit3.html
+++ b/unit3.html
@@ -44,48 +44,48 @@
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Getting Started and Primitive Types</p>
                 <ul class="unitDropdown" id="unit1Lessons">
-                    <li><a href="unit1.html">1.1 - Why Programming? Why Java?</a></li>
-                    <li><a href="unit1.html">1.2 - Variables and Primitive Data Types</a></li>
-                    <li><a href="unit1.html">1.3 - Expressions and Assignment Statements</a></li>
-                    <li><a href="unit1.html">1.4 - Compound Assignment Operators</a></li>
-                    <li><a href="unit1.html">1.5 - Casting and Ranges of Variables</a></li>
-                    <li><hr></li>
+                  <li><a href="unit1.html#part1">1.1 - Why Programming? Why Java?</a></li>
+                  <li><a href="unit1.html#part2">1.2 - Variables and Primitive Data Types</a></li>
+                  <li><a href="unit1.html#part3">1.3 - Expressions and Assignment Statements</a></li>
+                  <li><a href="unit1.html#part4">1.4 - Compound Assignment Operators</a></li>
+                  <li><a href="unit1.html#part5">1.5 - Casting and Ranges of Variables</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit2Lessons');">Unit 2 - Using Objects</p>
                 <ul class="unitDropdown" id="unit2Lessons">
-                    <li><a href="unit2.html">2.1 - Instances of Classes</a></li>
-                    <li><a href="unit2.html">2.2 - Creating and Storing Objects</a></li>
-                    <li><a href="unit2.html">2.3 - Calling a Void Method</a></li>
-                    <li><a href="unit2.html">2.4 - Calling a Void Method With Parameters</a></li>
-                    <li><a href="unit2.html">2.5 - Calling a Non-Void Method</a></li>
-                    <li><a href="unit2.html">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
-                    <li><a href="unit2.html">2.7 - String Methods</a></li>
-                    <li><a href="unit2.html">2.8 - Wrapper Classes</a></li>
-                    <li><a href="unit2.html">2.9 - Using the Math Class</a></li>
-                    <li><hr></li>
+                  <li><a href="unit2.html#part1">2.1 - Instances of Classes</a></li>
+                  <li><a href="unit2.html#part2">2.2 - Creating and Storing Objects</a></li>
+                  <li><a href="unit2.html#part3">2.3 - Calling a Void Method</a></li>
+                  <li><a href="unit2.html#part4">2.4 - Calling a Void Method With Parameters</a></li>
+                  <li><a href="unit2.html#part5">2.5 - Calling a Non-Void Method</a></li>
+                  <li><a href="unit2.html#part6">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
+                  <li><a href="unit2.html#part7">2.7 - String Methods</a></li>
+                  <li><a href="unit2.html#part8">2.8 - Wrapper Classes</a></li>
+                  <li><a href="unit2.html#part9">2.9 - Using the Math Class</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit3Lessons');">Unit 3 - Boolean Expressions and If Statements</p>
                 <ul class="unitDropdown" id="unit3Lessons">
-                    <li><a href="unit3.html">3.1 - Overview and Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.2 - If Statements and Control Flow</a></li>
-                    <li><a href="unit3.html">3.3 - If-Else Statements</a></li>
-                    <li><a href="unit3.html">3.4 - Else If Statements</a></li>
-                    <li><a href="unit3.html">3.5 - Compound Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.6 - Equivalent Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.7 - Comparing Objects</a></li>
-                    <li><hr></li>
+                  <li><a href="unit3.html#part1">3.1 - Overview and Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part2">3.2 - If Statements and Control Flow</a></li>
+                  <li><a href="unit3.html#part3">3.3 - If-Else Statements</a></li>
+                  <li><a href="unit3.html#part4">3.4 - Else If Statements</a></li>
+                  <li><a href="unit3.html#part5">3.5 - Compound Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part6">3.6 - Equivalent Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part7">3.7 - Comparing Objects</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit4Lessons');">Unit 4 - Iteration</p>
                 <ul class="unitDropdown" id="unit4Lessons">
-                    <li><a href="unit4.html">4.1 - While Loops</a></li>
-                    <li><a href="unit4.html">4.2 - For Loops</a></li>
-                    <li><a href="unit4.html">4.3 - Loops and Strings</a></li>
-                    <li><a href="unit4.html">4.4 - Nested For Loops</a></li>
-                    <li><a href="unit4.html">4.5 - Loop Analysis</a></li>
-                    <li><hr></li>
+                  <li><a href="unit4.html#part1">4.1 - While Loops</a></li>
+                  <li><a href="unit4.html#part2">4.2 - For Loops</a></li>
+                  <li><a href="unit4.html#part3">4.3 - Loops and Strings</a></li>
+                  <li><a href="unit4.html#part4">4.4 - Nested For Loops</a></li>
+                  <li><a href="unit4.html#part5">4.5 - Loop Analysis</a></li>
+                  <li><hr></li>
                 </ul>
 
             </div>
@@ -101,7 +101,7 @@
         </p>
         <hr class="unitSeparate">
         
-        <h2>3.1 - Overview and Boolean Expressions</h2>
+        <h2 id="part1">3.1 - Overview and Boolean Expressions</h2>
         <div class="unitContent">
           <p>
             What's the point of having many different numbers when we can't compare them right? Well, that's what boolean expressions are used for. Boolean expressions are created with 
@@ -123,7 +123,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>3.2 - If Statements and Control Flow</h2>
+        <h2 id="part2">3.2 - If Statements and Control Flow</h2>
         <div class="unitContent">
           <p>
             Now that we're familiar with boolean expressions, we can introduce if statements. If statements will are used whenever you want a specific piece of code to run only if 
@@ -163,7 +163,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>3.3 - If-Else Statements</h2>
+        <h2 id="part3">3.3 - If-Else Statements</h2>
         <div class="unitContent">
           <p>
             When writing if statements, a certain code is ran only if the conditional statement is true, but how about whenever the conditional statement is false? While we could write a completely 
@@ -190,7 +190,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>3.4 - Else If Statements</h2>
+        <h2 id="part4">3.4 - Else If Statements</h2>
         <div class="unitContent">
           <p>
             Another feature of if statements is the else if component. This part of the code runs only if the initial if statement or any previous else if statement is false. Refer 
@@ -226,7 +226,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>3.5 - Compound Boolean Expressions</h2>
+        <h2 id="part5">3.5 - Compound Boolean Expressions</h2>
         <div class="unitContent">
           <p>
             When writing if statements, you can actually put if statements within if statements. Sometimes, this can actually be useful when you have a lot of different conditions to test. However, 
@@ -264,7 +264,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>3.6 - Equivalent Boolean Expressions</h2>
+        <h2 id="part6">3.6 - Equivalent Boolean Expressions</h2>
         <div class="unitContent">
           <p>
             When using the operators mentioned in the previous subunit, there are many small patterns that you can look for and immediately know the result of the boolean expression. If we let  
@@ -294,7 +294,7 @@
         </div>
         <hr class="unitSeparate">
         
-        <h2>3.7 - Comparing Objects</h2>
+        <h2 id="part7">3.7 - Comparing Objects</h2>
         <div class="unitContent">
           <p>
             So far, we have only been using the operators to compare boolean, ints, and doubles. In addition to these primitive types, we can also compare objects, which includes Strings. Refer 
