--- a/unit1.html
+++ b/unit1.html
@@ -44,47 +44,47 @@
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Getting Started and Primitive Types</p>
                 <ul class="unitDropdown" id="unit1Lessons">
-                    <li><a href="unit1.html">1.1 - Why Programming? Why Java?</a></li>
-                    <li><a href="unit1.html">1.2 - Variables and Primitive Data Types</a></li>
-                    <li><a href="unit1.html">1.3 - Expressions and Assignment Statements</a></li>
-                    <li><a href="unit1.html">1.4 - Compound Assignment Operators</a></li>
-                    <li><a href="unit1.html">1.5 - Casting and Ranges of Variables</a></li>
+                    <li><a href="unit1.html#part1">1.1 - Why Programming? Why Java?</a></li>
+                    <li><a href="unit1.html#part2">1.2 - Variables and Primitive Data Types</a></li>
+                    <li><a href="unit1.html#part3">1.3 - Expressions and Assignment Statements</a></li>
+                    <li><a href="unit1.html#part4">1.4 - Compound Assignment Operators</a></li>
+                    <li><a href="unit1.html#part5">1.5 - Casting and Ranges of Variables</a></li>
                     <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit2Lessons');">Unit 2 - Using Objects</p>
                 <ul class="unitDropdown" id="unit2Lessons">
-                    <li><a href="unit2.html">2.1 - Instances of Classes</a></li>
-                    <li><a href="unit2.html">2.2 - Creating and Storing Objects</a></li>
-                    <li><a href="unit2.html">2.3 - Calling a Void Method</a></li>
-                    <li><a href="unit2.html">2.4 - Calling a Void Method With Parameters</a></li>
-                    <li><a href="unit2.html">2.5 - Calling a Non-Void Method</a></li>
-                    <li><a href="unit2.html">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
-                    <li><a href="unit2.html">2.7 - String Methods</a></li>
-                    <li><a href="unit2.html">2.8 - Wrapper Classes</a></li>
-                    <li><a href="unit2.html">2.9 - Using the Math Class</a></li>
+                    <li><a href="unit2.html#part1">2.1 - Instances of Classes</a></li>
+                    <li><a href="unit2.html#part2">2.2 - Creating and Storing Objects</a></li>
+                    <li><a href="unit2.html#part3">2.3 - Calling a Void Method</a></li>
+                    <li><a href="unit2.html#part4">2.4 - Calling a Void Method With Parameters</a></li>
+                    <li><a href="unit2.html#part5">2.5 - Calling a Non-Void Method</a></li>
+                    <li><a href="unit2.html#part6">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
+                    <li><a href="unit2.html#part7">2.7 - String Methods</a></li>
+                    <li><a href="unit2.html#part8">2.8 - Wrapper Classes</a></li>
+                    <li><a href="unit2.html#part9">2.9 - Using the Math Class</a></li>
                     <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit3Lessons');">Unit 3 - Boolean Expressions and If Statements</p>
                 <ul class="unitDropdown" id="unit3Lessons">
-                    <li><a href="unit3.html">3.1 - Overview and Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.2 - If Statements and Control Flow</a></li>
-                    <li><a href="unit3.html">3.3 - If-Else Statements</a></li>
-                    <li><a href="unit3.html">3.4 - Else If Statements</a></li>
-                    <li><a href="unit3.html">3.5 - Compound Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.6 - Equivalent Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.7 - Comparing Objects</a></li>
+                    <li><a href="unit3.html#part1">3.1 - Overview and Boolean Expressions</a></li>
+                    <li><a href="unit3.html#part2">3.2 - If Statements and Control Flow</a></li>
+                    <li><a href="unit3.html#part3">3.3 - If-Else Statements</a></li>
+                    <li><a href="unit3.html#part4">3.4 - Else If Statements</a></li>
+                    <li><a href="unit3.html#part5">3.5 - Compound Boolean Expressions</a></li>
+                    <li><a href="unit3.html#part6">3.6 - Equivalent Boolean Expressions</a></li>
+                    <li><a href="unit3.html#part7">3.7 - Comparing Objects</a></li>
                     <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit4Lessons');">Unit 4 - Iteration</p>
                 <ul class="unitDropdown" id="unit4Lessons">
-                    <li><a href="unit4.html">4.1 - While Loops</a></li>
-                    <li><a href="unit4.html">4.2 - For Loops</a></li>
-                    <li><a href="unit4.html">4.3 - Loops and Strings</a></li>
-                    <li><a href="unit4.html">4.4 - Nested For Loops</a></li>
-                    <li><a href="unit4.html">4.5 - Loop Analysis</a></li>
+                    <li><a href="unit4.html#part1">4.1 - While Loops</a></li>
+                    <li><a href="unit4.html#part2">4.2 - For Loops</a></li>
+                    <li><a href="unit4.html#part3">4.3 - Loops and Strings</a></li>
+                    <li><a href="unit4.html#part4">4.4 - Nested For Loops</a></li>
+                    <li><a href="unit4.html#part5">4.5 - Loop Analysis</a></li>
                     <li><hr></li>
                 </ul>
 
@@ -107,7 +107,7 @@
         </p>
         <hr class="unitSeparate">
         
-        <h2>1.1 - Why Programming? Why Java?</h2>
+        <h2 id="part1">1.1 - Why Programming? Why Java?</h2>
         <div class="unitContent">
             <p>
                 Programming is pretty much required for almost all pieces of technology to operate and within programming, 
@@ -151,7 +151,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>1.2 - Variables and Primitive Data Types</h2>
+        <h2 id="part2">1.2 - Variables and Primitive Data Types</h2>
         <div class="unitContent">
             <p>
                 Primitive data types are known as the different kinds of information that a programming language takes in to operate. 
@@ -272,7 +272,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>1.3 - Expressions and Assignment Statements</h2>
+        <h2 id="part3">1.3 - Expressions and Assignment Statements</h2>
         <div class="unitContent">
             <p>
                 Expressions and assignment statements simply represents all mathematical expressions that change at least two data types. This includes additon, subtraction, division, multiplication, and 
@@ -307,7 +307,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>1.4 - Compound Assignment Operators</h2>
+        <h2 id="part4">1.4 - Compound Assignment Operators</h2>
         <div class="unitContent">
             <p>
                 Compound assignment operators represent simple shortcuts to mathematical expressions that are commonly used. Look at the following two example:
@@ -353,7 +353,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>1.5 - Casting and Ranges of Variables</h2>
+        <h2 id="part5">1.5 - Casting and Ranges of Variables</h2>
         <div class="unitContent">
             <p>
                 Since doubles and ints can be pretty complicated, java allows for something called casting. Casting consists of turning an primitive type to a different variable type. This is most commonly used 
