--- a/unit2.html
+++ b/unit2.html
@@ -44,48 +44,48 @@
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit1Lessons');">Unit 1 - Getting Started and Primitive Types</p>
                 <ul class="unitDropdown" id="unit1Lessons">
-                    <li><a href="unit1.html">1.1 - Why Programming? Why Java?</a></li>
-                    <li><a href="unit1.html">1.2 - Variables and Primitive Data Types</a></li>
-                    <li><a href="unit1.html">1.3 - Expressions and Assignment Statements</a></li>
-                    <li><a href="unit1.html">1.4 - Compound Assignment Operators</a></li>
-                    <li><a href="unit1.html">1.5 - Casting and Ranges of Variables</a></li>
-                    <li><hr></li>
+                  <li><a href="unit1.html#part1">1.1 - Why Programming? Why Java?</a></li>
+                  <li><a href="unit1.html#part2">1.2 - Variables and Primitive Data Types</a></li>
+                  <li><a href="unit1.html#part3">1.3 - Expressions and Assignment Statements</a></li>
+                  <li><a href="unit1.html#part4">1.4 - Compound Assignment Operators</a></li>
+                  <li><a href="unit1.html#part5">1.5 - Casting and Ranges of Variables</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit2Lessons');">Unit 2 - Using Objects</p>
                 <ul class="unitDropdown" id="unit2Lessons">
-                    <li><a href="unit2.html">2.1 - Instances of Classes</a></li>
-                    <li><a href="unit2.html">2.2 - Creating and Storing Objects</a></li>
-                    <li><a href="unit2.html">2.3 - Calling a Void Method</a></li>
-                    <li><a href="unit2.html">2.4 - Calling a Void Method With Parameters</a></li>
-                    <li><a href="unit2.html">2.5 - Calling a Non-Void Method</a></li>
-                    <li><a href="unit2.html">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
-                    <li><a href="unit2.html">2.7 - String Methods</a></li>
-                    <li><a href="unit2.html">2.8 - Wrapper Classes</a></li>
-                    <li><a href="unit2.html">2.9 - Using the Math Class</a></li>
-                    <li><hr></li>
+                  <li><a href="unit2.html#part1">2.1 - Instances of Classes</a></li>
+                  <li><a href="unit2.html#part2">2.2 - Creating and Storing Objects</a></li>
+                  <li><a href="unit2.html#part3">2.3 - Calling a Void Method</a></li>
+                  <li><a href="unit2.html#part4">2.4 - Calling a Void Method With Parameters</a></li>
+                  <li><a href="unit2.html#part5">2.5 - Calling a Non-Void Method</a></li>
+                  <li><a href="unit2.html#part6">2.6 - String Objects: Concatenation, Literals, etc.</a></li>
+                  <li><a href="unit2.html#part7">2.7 - String Methods</a></li>
+                  <li><a href="unit2.html#part8">2.8 - Wrapper Classes</a></li>
+                  <li><a href="unit2.html#part9">2.9 - Using the Math Class</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit3Lessons');">Unit 3 - Boolean Expressions and If Statements</p>
                 <ul class="unitDropdown" id="unit3Lessons">
-                    <li><a href="unit3.html">3.1 - Overview and Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.2 - If Statements and Control Flow</a></li>
-                    <li><a href="unit3.html">3.3 - If-Else Statements</a></li>
-                    <li><a href="unit3.html">3.4 - Else If Statements</a></li>
-                    <li><a href="unit3.html">3.5 - Compound Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.6 - Equivalent Boolean Expressions</a></li>
-                    <li><a href="unit3.html">3.7 - Comparing Objects</a></li>
-                    <li><hr></li>
+                  <li><a href="unit3.html#part1">3.1 - Overview and Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part2">3.2 - If Statements and Control Flow</a></li>
+                  <li><a href="unit3.html#part3">3.3 - If-Else Statements</a></li>
+                  <li><a href="unit3.html#part4">3.4 - Else If Statements</a></li>
+                  <li><a href="unit3.html#part5">3.5 - Compound Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part6">3.6 - Equivalent Boolean Expressions</a></li>
+                  <li><a href="unit3.html#part7">3.7 - Comparing Objects</a></li>
+                  <li><hr></li>
                 </ul>
 
                 <p onclick="this.classList.toggle('unitSelected');openCloseUnits('unit4Lessons');">Unit 4 - Iteration</p>
                 <ul class="unitDropdown" id="unit4Lessons">
-                    <li><a href="unit4.html">4.1 - While Loops</a></li>
-                    <li><a href="unit4.html">4.2 - For Loops</a></li>
-                    <li><a href="unit4.html">4.3 - Loops and Strings</a></li>
-                    <li><a href="unit4.html">4.4 - Nested For Loops</a></li>
-                    <li><a href="unit4.html">4.5 - Loop Analysis</a></li>
-                    <li><hr></li>
+                  <li><a href="unit4.html#part1">4.1 - While Loops</a></li>
+                  <li><a href="unit4.html#part2">4.2 - For Loops</a></li>
+                  <li><a href="unit4.html#part3">4.3 - Loops and Strings</a></li>
+                  <li><a href="unit4.html#part4">4.4 - Nested For Loops</a></li>
+                  <li><a href="unit4.html#part5">4.5 - Loop Analysis</a></li>
+                  <li><hr></li>
                 </ul>
 
             </div>
@@ -102,7 +102,7 @@
         </p>
         <hr class="unitSeparate">
         
-        <h2>2.1 - Instances of Classes</h2>
+        <h2 id="part1">2.1 - Instances of Classes</h2>
         <div class="unitContent">
           <p>
             Objects in java are known as a reference type that is used to reference multiple pieces of data under one name. In this case, those multiple pieces of data 
@@ -118,7 +118,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.2 - Creating and Storing Objects</h2>
+        <h2 id="part2">2.2 - Creating and Storing Objects</h2>
         <div class="unitContent">
           <p>
             Since we now understand the differences between a classes and objects, we can begin making them. For this section of unit 2, we will try to stick with the dog example. When we want to 
@@ -187,7 +187,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.3 - Calling a Void Method</h2>
+        <h2 id="part3">2.3 - Calling a Void Method</h2>
         <div class="unitContent">
           <p>
             Methods are basically a way of storing a chunk of code under a reference so you can call it multiple times without needing to rewrite the actual code every single time. 
@@ -244,7 +244,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.4 - Calling a Void Method with Parameters</h2>
+        <h2 id="part4">2.4 - Calling a Void Method with Parameters</h2>
         <div class="unitContent">
           <p>
             In the previous subunit, you might have remembered that I mentioned something about adding a list of parameters to methods. In this section of unit 2, we will go over that. We will be 
@@ -285,7 +285,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.5 - Calling a Non-Void Method</h2>
+        <h2 id="part5">2.5 - Calling a Non-Void Method</h2>
         <div class="unitContent">
           <p>
             Last time, we showed an example of using parameters in a void method. In this section of unit 2, we will do the same but for non-void methods. First, lets create some methods.
@@ -318,7 +318,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.6 - String Objects: Concatenation, Literals, etc.</h2>
+        <h2 id="part6">2.6 - String Objects: Concatenation, Literals, etc.</h2>
         <div class="unitContent">
           <p>
             At this point, I'm sure you are familiar with all of the primitive types - int, double, String, and booleans. Among all of those, one of them is actually considered to be an object and that 
@@ -361,7 +361,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.7 - String Methods</h2>
+        <h2 id="part7">2.7 - String Methods</h2>
         <div class="unitContent">
           <p>
             Since we know that String is a built-in class, we also know that it has some built-in methods that we can use on Strings. There are many different String methods but here are just some of the 
@@ -401,7 +401,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.8 - Wrapper Classes</h2>
+        <h2 id="part8">2.8 - Wrapper Classes</h2>
         <div class="unitContent">
           <p>
             You are probably wondering if ints and doubles have a class since you've learned just learn of the String class. Well, sort of. There are classes called Integer and Double but are still 
@@ -427,7 +427,7 @@
         </div>
         <hr class="unitSeparate">
 
-        <h2>2.9 - Using The Math Class</h2>
+        <h2 id="part9">2.9 - Using The Math Class</h2>
         <div class="unitContent">
           <p>
             When using the Math class, you don't have to create any object to use its methods. This class doesn't have any constructors so in order to use any of their methods, simply just write 
