--- a/unit1.html
+++ b/unit1.html
@@ -95,7 +95,7 @@
     <h1>Unit 1 - Getting Started and Primitive Types</h1>
     <main id="pageContainer">
         <p class="font-weight-bold lead">AP Exam Weighting: 2.5-5%</p>
-        <p>
+        <p class="introduction">
             The purpose of this unit is to introduce students to the object-oriented programming language, Java. 
             Additionally, it consists of the basic necessities for progressing through the rest of this course. 
             These necessities range from primitive types like booleans and doubles all the way to what variables 
