--- a/unit2.html
+++ b/unit2.html
@@ -95,7 +95,7 @@
     <h1>Unit 2 - Using Objects</h1>
     <main id="pageContainer">
         <p class="font-weight-bold lead">AP Exam Weighting: 5-7.5%</p>
-        <p>
+        <p class="introduction">
             Unit 2 of this course consists of learning about how to utilize the content learned from Unit 1 to create <strong>methods</strong>(functions) and begin <strong>making 
             objects</strong> that represent actual items since java is an object-oriented programming language after all. Additionally, this unit will introduce the <strong>Math and 
             String classes</strong>, which are classes that basically allows you to be more flexible with the things that you can create. 
