--- a/unit3.html
+++ b/unit3.html
@@ -95,7 +95,7 @@
     <h1>Unit 3 - Boolean Expressions and If Statements</h1>
     <main id="pageContainer">
         <p class="font-weight-bold lead">AP Exam Weighting: 15-17.5%</p>
-        <p>
+        <p class="introduction">
             Unit 3 of this course consists of learning about new expressions that can be used to compare not only primitive types, but also objects. In addition to this, it will introduce 
             a very important statement that will be used throughout the rest of this course - If-else statements.
         </p>
